Correct style spacing between elements

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1487,6 +1487,7 @@ h1
       display: flex
       flex-wrap: wrap
       font-size: 1.25em
+      justify-content: space-between
       font-weight: 600
       padding: 1em 2em
 
@@ -1495,7 +1496,6 @@ h1
         background: $grey
         color: #FFF
         font-size: .8em
-        margin-left: auto
 
         &:hover
           background: darken($grey, 5%)
